--- a/reviews.html
+++ b/reviews.html
@@ -500,7 +500,7 @@
                     </div>
                     <div class="card-content">
                         <div class="rating">9.3/10</div>
-                        <p class="review-text">Un viaje épico entre el mundo espiritual con personajes memorables.</p>
+                        <p class="review-text">Un viaje épico entre el mundo espiritual.</p>
                     </div>
                     <div class="card-action">
                         <a href="#">Leer reseña completa</a>
